# wield-namespace

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_helper.py
src/wavestate/collection/: __init__.py  _version.py
src/wield/collection/: _version.py
tools/: check_versions.py
wavestate/collection/: __init__.py  version.py
