# -*- coding: utf-8 -*-
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: © 2021 Massachusetts Institute of Technology.
# SPDX-FileCopyrightText: © 2021 Lee McCuller <mcculler@mit.edu>
# NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE

[metadata]
name = wavestate
author = Lee McCuller
author_email = mcculler@mit.edu
description = Toolkit for modeling interferometers, circuits, signals, and control systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wavestate/wavestate-collection
license = Apache-2.0
project_urls =
  Bug Tracker = https://github.com/wavestate/wavestate-collection/issues
classifiers =
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Software Development :: Libraries :: Python Modules
